# File-Encryptor

./: .browserslistrc  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  BUILD_INSTRUCTIONS.md  Cargo.toml  DEVELOPMENT.md  DISTRIBUTION_GUIDE.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  SECURITY_AUDIT.md  build.bat  encrypt-test.js  index.html  main.py  package-lock.json  package.json  run-encryptor.bat  webpack.config.js
assets/: README.md
public/: asset-manifest.json  index.html
scripts/: build.bat  build.sh
src/: App.css  App.jsx  App.tsx  index.css  main.js  preload.js  renderer.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  error.rs  file_ops.rs  humor.rs  lib.rs  main.rs  types.rs
src/config/: settings.py
src/core/: file_crypto.py
src/encryption/: decrypt.js  encrypt.js
src/gui/: App.jsx  app.py  styles.css
src/gui/tabs/: file_decrypt.py  file_encrypt.py
src/types/: index.ts
src/utils/: fileUtils.js  index.ts
test/: test.js
tests/test_core/: test_file_crypto.py
