[package]
name = "file-encryptor"
version = "2.0.0"
description = "A secure file encryption application with dark humor - Tauri Edition"
authors = ["drdeeks"]
edition = "2021"
license = "MIT"
repository = "https://github.com/drdeeks/File-Encryptor"

[lib]
name = "file_encryptor"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
zeroize = "1.7"
memmap2 = "0.9"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = "1.0"
lazy_static = "1.4"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]